cmake_minimum_required(VERSION 3.23)
project(TSIRC__)

set(CMAKE_CXX_STANDARD 23)

add_executable(TSIRC__ main.cpp)

add_executable(main main.cpp Studet_Class.cpp Avg_runs.cpp Bank_Acc.cpp Ballot.cpp Batting_AVG.cpp Employee_salary.cpp inline.cpp printline.cpp funtcion_overloading.cpp Friendly_Function.cpp manuplator.cpp Time.cpp Swapping_private_data_of_classes.cpp returning_object.cpp dereferencing_operators.cpp Class_with_constructors.cpp Overload_Constructors.cpp Dynamic_initalization_of_constructors.cpp Copy_Constructor.cpp Constructors_with_new.cpp Constructing_matrix_objects.cpp operator_overloading_using_friends.cpp Single_inheritance.cpp Multilevel_Inheritance.cpp Multiple_Inheritance.cpp Hybrid_Inheritance.cpp Hierarchical_Inheritance.cpp pointers_1.cpp pointers_2.cpp pointers_3.cpp pointers_4.cpp pointers_5.cpp Getline.cpp File_handling_1_single.cpp FIle_Handling_Allopp.cpp try.cpp)
add_executable(Processing_Shopping_List Processing_Shopping_List.cpp)
add_executable(Studet_Class Studet_Class.cpp)
add_executable(Bank_Acc Bank_Acc.cpp)
add_executable(Ballot Ballot.cpp)
add_executable(Batting_AVG Batting_AVG.cpp)
add_executable(Employee_salary Employee_salary.cpp)
add_executable(UK-1 UK-1.cpp)
add_executable(manuplator manuplator.cpp)
add_executable(Time Time.cpp)
add_executable(Swapping_private_data_of_classes Swapping_private_data_of_classes.cpp)
add_executable(returning_object returning_object.cpp)
add_executable(dereferencing_operators dereferencing_operators.cpp)
add_executable(Class_with_constructors Class_with_constructors.cpp)
add_executable(Overload_Constructors Overload_Constructors.cpp)
add_executable(Constructing_matrix_objects Constructing_matrix_objects.cpp)
add_executable(operator_overloading_using_friends operator_overloading_using_friends.cpp)
add_executable(Single_inheritance Single_inheritance.cpp)
add_executable(Multilevel_Inheritance Multilevel_Inheritance.cpp)
add_executable(Multiple_Inheritance Multiple_Inheritance.cpp)
add_executable(Hybrid_Inheritance Hybrid_Inheritance.cpp)
add_executable(Hierarchical_Inheritance Hierarchical_Inheritance.cpp)
add_executable(pointers_1 pointers_1.cpp)
add_executable(pointers_2 pointers_2.cpp)
add_executable(pointers_3 pointers_3.cpp)
add_executable(pointers_4 pointers_4.cpp)
add_executable(pointers_5 pointers_5.cpp)
add_executable(Getline Getline.cpp)
add_executable(File_handling_1_single File_handling_1_single.cpp)
add_executable(Constructors_with_new Constructors_with_new.cpp)
add_executable(Avg_runs Avg_runs.cpp)
add_executable(FIle_Handling_Allopp FIle_Handling_Allopp.cpp)
add_executable(try try.cpp)